<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background2"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background1"
        android:padding="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_2"
            android:textColor="@color/white"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/number_1"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_clear"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/green"
                android:text="@string/c"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_bracket_left"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/green"
                android:text="@string/k" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_bracket_right"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/green"
                android:text="@string/ku" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_division"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/green"
                android:text="@string/f"/>
        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_7"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/_7" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_8"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/_8" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_9"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/_9" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_multiply"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/b"
                android:textColor="@color/green"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_4"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_5"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/_5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_6"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/_6" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_subtaraction"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/o"
                android:textColor="@color/green"/>

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_1"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/_1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_2"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/_2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_3"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/_3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_addition"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/tambah"
                android:textColor="@color/green"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_0"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/_0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_dot"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/titik" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_equals"
                style="@style/Button_Style"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/sama_dengan"
                android:layout_marginEnd="40dp"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>